--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy
-torch=1.1
-torchvision
+requirements.txt
+easydict==1.9
+torchsummary==1.5.1
 tensorflow
+tensorboard
 terminaltables
-tqdm
-opencv-python
-shapely
+scikit-learn==0.22.2
+opencv-python==4.2.0.34
